--- a/habbit/mainwindow.ui
+++ b/habbit/mainwindow.ui
@@ -11,16 +11,53 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ykza</string>
+   <string>Main</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QTableView" name="tableView">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>401</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>200</y>
+      <width>54</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Total:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>200</y>
+      <width>85</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Submit</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>400</width>
-     <height>30</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDaily">
@@ -68,7 +105,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionChange_daily_tasks">
    <property name="text">
-    <string>Edit daily tasks</string>
+    <string>Manage daily tasks</string>
    </property>
   </action>
   <action name="actionShow_history">
