--- a/habbit/adddailytaskwindow.ui
+++ b/habbit/adddailytaskwindow.ui
@@ -113,7 +113,7 @@
     <rect>
      <x>240</x>
      <y>150</y>
-     <width>83</width>
+     <width>161</width>
      <height>32</height>
     </rect>
    </property>
@@ -129,6 +129,29 @@
    </property>
    <property name="text">
     <string>Type</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="timeLabel">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>200</y>
+     <width>58</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Time</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="timeComboBox">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>190</y>
+     <width>161</width>
+     <height>32</height>
+    </rect>
    </property>
   </widget>
  </widget>
